wrapping problem fixed for standard page, people page redux using standard page format (no visible changes to old people page)

--- a/css/firststep.css
+++ b/css/firststep.css
@@ -183,6 +183,13 @@ body {
  font-size: 24px;
 }
 
+duckbill
+ float:left;
+ display: inline;
+ clear: none;
+ padding-left: 20px;
+
+
 .frontrownews {
  display: inline-block;
  height: 150px;
